[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "apihunter"
version = "0.1.1"
description = "Hunt for exposed API documentation using search dorks"
requires-python = ">=3.10"
dependencies = [
    "ddgs",
    "rich"
]

[project.scripts]
apihunter = "apihunter.__main__:main"

[tool.poetry]
packages = [
    { include = "apihunter" }
]
